# Project-04-2022

./: LICENSE  README.md
analytics/: SWEETVIZ_REPORT.html  dataset_marketing_campaign.ipynb  dataset_new.ipynb  dataset_population.ipynb  personal_Key_Indicators_of_Heart_Disease.ipynb  pyproject.toml
analytics/.ipynb_checkpoints/: dataset_marketing_campaign-checkpoint.ipynb  dataset_new-checkpoint.ipynb
analytics/Files/: Aula1_Python Pandas Data Science.ipynb  Aula1_Python_Pandas_Data_Science.ipynb  Aula2 - Matplotlib and Seaborn.ipynb  Aula2_Matplotlib_and_Seaborn.ipynb  Aula3_Classes_Python(Object Oriented Programming).ipynb  Aula3_OOP(Object Oriented Programming).ipynb  Aula3_OOP_Classes_Python(Object Oriented Programming).ipynb  Aula3_Sklearn_Real-World_Python_Machine_Learning_Tutorial.ipynb  Aula4_OOP_Classes.ipynb  Aula4_Sklearn_Real-World_Python_Machine_Learning_Tutorial.ipynb  Aula5_Sklearn_Real-World_Python_Machine_Learning_Tutorial.ipynb  Aula6_Sklearn_Real-World_Python_Machine_Learning_Tutorial.ipynb  Linear_Regression_car_price_prediction.ipynb  dataframe_personal_Key_Indicators_of_Heart_Disease.ipynb  dataframe_population.ipynb
analytics/Files/.ipynb_checkpoints/: Aula1_Python Pandas Data Science-checkpoint.ipynb  Aula1_Python_Pandas_Data_Science-checkpoint.ipynb  Aula2_Matplotlib_and_Seaborn-checkpoint.ipynb  Aula3_OOP_Classes_Python(Object Oriented Programming)-checkpoint.ipynb  Aula4_OOP_Classes-checkpoint.ipynb  Aula5_Sklearn_Real-World_Python_Machine_Learning_Tutorial-checkpoint.ipynb  Linear_Regression_car_price_prediction-checkpoint.ipynb  (+1 more)
(+2 files in other folders)
