[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Nara Costa  <naracostaaaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
sweetviz = "^2.1.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
